hybrid-bbqc/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etl-hybrid-bbqc
  labels:
    app: etl-hybrid-bbqc
spec:
  selector:
    app: etl-hybrid-bbqc
  ports:
    - name: oauth
      port: 4180
      targetPort: oauth
      protocol: TCP
