hybrid-bbqc/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etl-hybrid-bbqc
  labels:
    app: etl-hybrid-bbqc
spec:
  host: etl-hybrid-bbqc.app.cern.ch
  to:
    kind: Service
    name: etl-hybrid-bbqc
  port:
    targetPort: oauth
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
